--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
  I feel like nerd and hacker.
+ Hello other people, daily reminder you can do it!
  <p>January nineteenth two-throusand twenty one. Today I did some <a target="_blank"href="https://www.freecodecamp.org/learn" freeCodecamp</a></p>
 </body>
 <footer> Hehe Lol</footer>
