--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  I feel like nerd and hacker.
  Hello other people, daily reminder you can do it!
  <p>Januaru eighteenth two-thousand twenty one. Today did not do coding, this message was posted on 2021-01-19</p>
- <p>January nineteenth two-throusand twenty one. Today I did some <a target="_blank"href="https://www.freecodecamp.org/learn" freeCodecamp</a></p>
+ <p>January nineteenth two-throusand twenty one. Today I did some freeCodecamp<a target="_blank"href="https://www.freecodecamp.org/learn"</a></p>
 </body>
 <footer> Hehe Lol</footer>
 </html>
