--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Makayla's Very First Published Site!</title>
+  <title>Document</title>
 </head>
 <body>
- I feel like nerd and hacker.
- Hello other people, daily reminder you can do it!
- <p>January eighteenth two-thousand twenty one. Today did not do coding, this message was posted on 2021-01-19</p>
- <p>January nineteenth two-throusand twenty one. Today I did some freeCodecamp<a target="_blank"href="https://www.freecodecamp.org/learn"</a></p>
+  
 </body>
-<footer> Hehe Lol</footer>
 </html>
