--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-<link rel="stylesheet" href="styles/main.css">
+  <title>twitch-overlays</title>
+  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/font.css">
 </head>
 <body>
-  
+  <header>
+    <section>
+      <div id="follower" class="update">
+        New Follower: 
+      </div>
+      <div id="donation" class="update">
+        Donation: 
+      </div>
+    </section>
+  </header>
 </body>
 </html>
